# Pi-pico---8x8-Led-Matrix-lib

./: .gitignore  CMakeLists.txt  README.md
include/libled8x8/: libled8x8.h
src/: CMakeLists.txt  max7219.c  pico_port.c  prototypes.h  spi_config.h
test/: CMakeLists.txt  led8x8_test.c  sample8x8.c
